start JS titles

--- a/index.html
+++ b/index.html
@@ -431,7 +431,16 @@ class: inverse center title-slide middle
 
 ---
 class: header_background 
-# TODO
+# Add new inputs
+
+---
+class: header_background
+# Include React
+
+---
+class: header_background
+# Optimize with custom handlers
+
 
 
 ---
