--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ class: header_background
 &lt;br&gt;
 
 .center[
-&lt;iframe src="https://gallery.shinyapps.io/084-single-file?showcase=0" width="720" height="400px" data-external="1"&gt;&lt;/iframe&gt;
+&lt;iframe src="http://localhost:3511?showcase=0" width="720" height="400px" data-external="1"&gt;&lt;/iframe&gt;
 ]
 
 
@@ -109,7 +109,7 @@ class: header_background
 &lt;br&gt;
 
 .center[
-&lt;iframe width="50%" src="https://unleash-shiny.shinyapps.io/intro_dj-system/" allowfullscreen="" frameborder="0" scrolling="yes" height="400px"&gt;&lt;/iframe&gt;
+&lt;iframe width="50%" src="http://localhost:3512" allowfullscreen="" frameborder="0" scrolling="yes" height="500px" style="margin-top: -50px"&gt;&lt;/iframe&gt;
 ]
 
 
@@ -211,7 +211,7 @@ tags$style(
 ]
 
 .pull-right[
-&lt;iframe width="100%" src="https://unleash-shiny.shinyapps.io/css_selector-class-id/" allowfullscreen="" frameborder="0" scrolling="yes" height="400px"&gt;&lt;/iframe&gt;
+&lt;iframe width="100%" src="http://localhost:3513" allowfullscreen="" frameborder="0" scrolling="yes" height="400px"&gt;&lt;/iframe&gt;
 ]
 
 
@@ -378,7 +378,7 @@ css &lt;- sass(
 ]
 
 .pull-right[
-&lt;iframe width="100%" src="https://unleash-shiny.shinyapps.io/sass_examples_shinybulma-custom" allowfullscreen="" frameborder="0" scrolling="yes" height="300px"&gt;&lt;/iframe&gt;
+&lt;iframe width="100%" src="http://localhost:3514" allowfullscreen="" frameborder="0" scrolling="yes" height="300px"&gt;&lt;/iframe&gt;
 ]
 
 ]
@@ -494,7 +494,7 @@ bs_theme_preview(bslib_neon_theme, with_themer = FALSE)
 ]
 
 .pull-right[
-&lt;img src="assets/images/bootstraplib-theme-preview.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;iframe width="100%" src="http://localhost:3515" allowfullscreen="" frameborder="0" scrolling="yes" height="400px"&gt;&lt;/iframe&gt;
 ]
 
 
@@ -504,8 +504,10 @@ class: header_background
 
 &lt;br&gt;
 
+Static plot theming requires `{thematic}`
+
 .center[
-&lt;iframe width="100%" src="https://unleash-shiny.shinyapps.io/bslib_dynamic-theming" allowfullscreen="" frameborder="0" scrolling="yes" height="300px"&gt;&lt;/iframe&gt;
+&lt;iframe width="100%" src="http://localhost:3516" allowfullscreen="" frameborder="0" scrolling="yes" height="400px"&gt;&lt;/iframe&gt;
 ]
 
 
@@ -515,15 +517,17 @@ class: header_background
 
 &lt;br&gt;
 
+Only 1 code base, 2 possible outputs 😎️
+
 .pull-left[
 ## BS4 accordion
-&lt;iframe width="100%" src="https://unleash-shiny.shinyapps.io/bslib_conditional-rendering_bs4-accordions" allowfullscreen="" frameborder="0" scrolling="yes" height="300px"&gt;&lt;/iframe&gt;
+&lt;iframe width="100%" src="http://localhost:3517" allowfullscreen="" frameborder="0" scrolling="yes" height="400px"&gt;&lt;/iframe&gt;
 ]
 
 
 .pull-right[
 ## BS5 accordion
-&lt;iframe width="100%" src="https://unleash-shiny.shinyapps.io/bslib_conditional-rendering_bs5-accordions" allowfullscreen="" frameborder="0" scrolling="yes" height="300px"&gt;&lt;/iframe&gt;
+&lt;iframe width="100%" src="http://localhost:3518" allowfullscreen="" frameborder="0" scrolling="yes" height="400px"&gt;&lt;/iframe&gt;
 ]
 
 
@@ -594,8 +598,12 @@ packer::bundle()
 ]
 
 .panel[.panel-name[😄 Enjoy]
-.center[
-&lt;iframe width="100%" src="https://dgranjon.shinyapps.io/vdpMod" allowfullscreen="" frameborder="0" scrolling="yes" height="300px"&gt;&lt;/iframe&gt;
+.pull-left[
+R in Pharm 2021 RinteRface [workshop](https://rinpharma2021.rinterface.com/).
+]
+
+.pull-right[
+&lt;iframe width="100%" src="http://localhost:3519" allowfullscreen="" frameborder="0" scrolling="yes" height="300px"&gt;&lt;/iframe&gt;
 ]
 ]
 
@@ -611,7 +619,7 @@ class: header_background
 .panelset[
 .panel[.panel-name[`renderUI` causes lags]
 .pull-left[
-&lt;iframe width="100%" src="https://unleash-shiny.shinyapps.io/input-system_update-box-renderUI" allowfullscreen="" frameborder="0" scrolling="yes" height="300px"&gt;&lt;/iframe&gt;
+&lt;iframe width="100%" src="http://localhost:3520" allowfullscreen="" frameborder="0" scrolling="yes" height="300px"&gt;&lt;/iframe&gt;
 ]
 
 .small.pull-right[
@@ -638,7 +646,7 @@ output$custom_box &lt;- renderUI({
 .panel[.panel-name[Prefer `update_*` functions]
 
 .pull-left[
-&lt;iframe width="100%" src="https://unleash-shiny.shinyapps.io/input-system_boxes-on-steroids-2" allowfullscreen="" frameborder="0" scrolling="yes" height="300px"&gt;&lt;/iframe&gt;
+&lt;iframe width="100%" src="http://localhost:3521" allowfullscreen="" frameborder="0" scrolling="yes" height="300px"&gt;&lt;/iframe&gt;
 ]
 
 .xsmall.pull-right[
