--- a/index.html
+++ b/index.html
@@ -91,6 +91,25 @@ class: header_background
 
 
 ---
+class: header_background
+# What I will share today
+
+&lt;br&gt;
+
+.pull-left[
+### How it started ...
+&lt;img src="assets/images/virtual-patient-1.png" width="100%"/&gt;
+]
+
+--
+
+.pull-right[
+### ... 1 years after
+&lt;img src="assets/images/virtual-patient-3.png" width="100%"/&gt;
+]
+
+
+---
 class: header_background 
 # From the simplest app ... 👶
 
@@ -136,6 +155,7 @@ class: header_background
 --
 
 - Few custom HTML tags.
+
 
 ---
 class: header_background
